Updated Story of OpenGrok (mediawiki)

--- a/Story-of-OpenGrok.mediawiki
+++ b/Story-of-OpenGrok.mediawiki
@@ -159,7 +159,7 @@ This would be explaining the technology behind it in more detail. It would be a 
  Legend:
 **Y** : Yes the feature is present
 **\#** : the feature may be partly present
-**-** : not applicable
+**N/A** : not applicable
  Note: OpenGrok provides all the above features.
 
  The Lucene based program search engine readily had all the missing search features above. It did the correct way of doing full text searches. It could identify definitions in any language that ctags understood. It could limit searches to a branch of the source tree (aka hierarchical search). It showed the matching lines for a search instead of just line numbers. And it did an incremental update of its index.
