--- a/File-downloads.mediawiki
+++ b/File-downloads.mediawiki
@@ -1,26 +1,17 @@
-Download OpenGrok Releases
-Edit
-License
+See License page for licensing information.
 
-    OpenGrok is an open source project and is distributed under CDDL.
-    OpenGrok uses software libraries from Apache Software Foundation.
-    This product includes software developed by CollabNet.
+=== Source code ===
 
-Source code
+The main repository is here: https://github.com/OpenGrok/OpenGrok
 
-We use git now to access sources, see the main repository here:
-https://github.com/OpenGrok/OpenGrok
-(you can even fork it there and then ask for a pull request)
+How to get a local clone:
 
-how to get a local clone:
+  $ git clone https://github.com/OpenGrok/OpenGrok
+  (similar way for any of your forks, ev. use ssh)
 
-$ git clone https://github.com/OpenGrok/OpenGrok
-(similar way for any of your forks, ev. use ssh)
+=== User scripts ===
 
-User scripts
+* Firefox Greasemonkey [http://userscripts.org/scripts/show/4758 auto-complete script] for opengrok - courtesy of Jim Wilson
+* VIM plugin from Jacobo de Vera - [https://github.com/jdevera/vim-opengrok-search github jdevera]
 
- Firefox Greasemonkey [http://userscripts.org/scripts/show/4758 auto-complete script] for opengrok - courtesy of Jim Wilson
-
- VIM plugin from Jacobo de Vera - github jdevera
-
-Old binary & source releases can be downloaded from XXX files
+Old binary & source releases can be downloaded from files directory.
