Updated How to install OpenGrok (mediawiki)

--- a/How-to-install-OpenGrok.mediawiki
+++ b/How-to-install-OpenGrok.mediawiki
@@ -123,12 +123,12 @@ If you need to change name of the web application from source to something else 
 
 ==== Deploy the modified .war file in glassfish/Sun Java App Server: ====
 
-* **Option 1:** Use browser and log into <code>glassfish web administration interface</code>
+* '''Option 1:''' Use browser and log into <code>glassfish web administration interface</code>
 
 : Common Tasks / Applications / Web Applications , button **Deploy** and point it to your source.war webarchive
 
-* **Option 2:** Copy the source.war file to //GLASSFISH///domains///YOURDOMAIN///autodeploy directory, glassfish will try to deploy it "automagically".
-* **Option 3:** Use cli from //GLASSFISH// directory:
+* '''Option 2:''' Copy the source.war file to //GLASSFISH///domains///YOURDOMAIN///autodeploy directory, glassfish will try to deploy it "automagically".
+* '''Option 3:''' Use cli from //GLASSFISH// directory:
 
  # ./bin/asadmin deploy /path/to/source.war
 
