--- a/How-to-install-OpenGrok.mediawiki
+++ b/How-to-install-OpenGrok.mediawiki
@@ -125,7 +125,7 @@ If you need to change name of the web application from source to something else 
 
 * '''Option 1:''' Use browser and log into <code>glassfish web administration interface</code>
 
-: Common Tasks / Applications / Web Applications , button **Deploy** and point it to your source.war webarchive
+: Common Tasks / Applications / Web Applications , button '''Deploy''' and point it to your source.war webarchive
 
 * '''Option 2:''' Copy the source.war file to //GLASSFISH///domains///YOURDOMAIN///autodeploy directory, glassfish will try to deploy it "automagically".
 * '''Option 3:''' Use cli from //GLASSFISH// directory:
@@ -138,8 +138,8 @@ If you need to change name of the web application from source to something else 
 
 ==== Optional setup of security manager for tomcat ====
 
-On some linux distribution you need to setup permissions for SRC_ROOT and DATA_ROOT. Please check your [http://tomcat.apache.org/tomcat-5.5-doc/security-manager-howto.html Tomcat documentation] on this, or simply disable (your risk!) __security manager__ for tomcat (e.g. in debian/ubuntu : in file /etc/default/tomcat5.5 set TOMCAT5_SECURITY=no).
-A sample approach is to __edit__ <code>/etc/tomcat5.5/04webapps.policy</code> (or <code>/var/apache/tomcat/conf/catalina.policy</code>) and set this (it will give opengrok all permissions) for your opengrok webapp instance:
+On some linux distribution you need to setup permissions for SRC_ROOT and DATA_ROOT. Please check your [http://tomcat.apache.org/tomcat-5.5-doc/security-manager-howto.html Tomcat documentation] on this, or simply disable (your risk!) <u>security manager</u> for Tomcat (e.g. in debian/ubuntu : in file <code>/etc/default/tomcat5.5</code> set <code>TOMCAT5_SECURITY=no</code>).
+A sample approach is to <u>edit</u> <code>/etc/tomcat5.5/04webapps.policy</code> (or <code>/var/apache/tomcat/conf/catalina.policy</code>) and set this (it will give opengrok all permissions) for your opengrok webapp instance:
 
 <code>grant codeBase "file:${catalina.home}/webapps/source/-" {     permission java.security.AllPermission;};
 grant codeBase "file:${catalina.home}/webapps/source/WEB-INF/lib/-" {     permission java.security.AllPermission;};</code>
