--- a/How-to-install-OpenGrok.mediawiki
+++ b/How-to-install-OpenGrok.mediawiki
@@ -7,7 +7,7 @@ This document is a live document, we are updating it as the new versions/changes
 You need the following:
 
 * [http://java.sun.com/javase/downloads/index.jsp JDK] 1.6 ("1.6.0_17") or higher
-* {OpenGrok **binaries** from [XXX] (either the package for Solaris, or .tar.gz with binaries, NOT the src !)
+* {OpenGrok '''binaries''' from [XXX] (either the package for Solaris, or .tar.gz with binaries, NOT the src !)
 * [http://ctags.sourceforge.net Exuberant Ctags] for analysis
 * A servlet container like [https://glassfish.dev.java.net/ GlassFish] or [http://tomcat.apache.org Tomcat] (5.x or later) also running with java at least 1.6
 * If history is needed, appropriate binary (in some cases also cvs/svn repository) must be present on the system (e.g. [http://subversion.tigris.org Subversion] or [http://www.selenic.com/mercurial/wiki/index.cgi Mercurial] or [http://dlc.sun.com/osol/devpro/downloads/current/ SCCS] or ... )
