Updated Story of OpenGrok (mediawiki)

--- a/Story-of-OpenGrok.mediawiki
+++ b/Story-of-OpenGrok.mediawiki
@@ -188,7 +188,7 @@ It is available for download. The logo has a opening flower bracket. Which is a 
 
 == OpenGrok Internals ==
 
-Some details of OpenGrok internal workings can be found on [[OpenGrok Internals>>Project opengrok.internals]] page.
+Some details of OpenGrok internal workings can be found on [[OpenGrok Internals]] page.
 
 == In Retrospect ==
 
