Updated Story of OpenGrok (mediawiki)

--- a/Story-of-OpenGrok.mediawiki
+++ b/Story-of-OpenGrok.mediawiki
@@ -10,9 +10,9 @@ This would be explaining the technology behind it in more detail. It would be a 
 
 Being a security sentry of all Sun products, I keep a watch on reports of newly discovered security holes and then check if any Sun software is affected by them. Typically I would use [http://docs.sun.com/source/806-3567/cscope.html cscope] to find any fragments of code that I suspect to be vulnerable. In Solaris land, most of the ON (OS/Net) gate has [http://docs.sun.com/source/806-3567/cscope.html cscope] indexes pre-built nightly. Solaris is not just ON, it is a WOS (Wad Of Stuff); code and binaries flowing in from a dozen or so gates; and there are many more software products which I had no ready access to cscope indexes or sources.
 
-I gathered Solaris Install images, JES install images, Sun Cluster and N1 software and many other good and great things under Sun. I wrote a Perl script, that would go down recursively on files and directory content. It would extract as much textual information as it could. For example it would convert stream packages to directories, uncompresses and extract tar, zip, gz, bzip files or run [http://docs.sun.com/app/docs/doc/816-5165/6mbb0m9en?a=view dis(1)] on [http://docs.sun.com/app/docs/doc/816-5172/6mbb7btp9?a=view ELF (3)] files, [http://docs.sun.com/app/docs/doc/816-5165/6mbb0m9t8?a=view strings(1)] on binary files. All this textual information was stored in a separate directory. This was gigabytes of characters. The initial perl script was named rob.pl (**r**evenge **o**f the **b**inaries). It took more than a day to complete the process; but it worked.
+I gathered Solaris Install images, JES install images, Sun Cluster and N1 software and many other good and great things under Sun. I wrote a Perl script, that would go down recursively on files and directory content. It would extract as much textual information as it could. For example it would convert stream packages to directories, uncompresses and extract tar, zip, gz, bzip files or run [http://docs.sun.com/app/docs/doc/816-5165/6mbb0m9en?a=view dis(1)] on [http://docs.sun.com/app/docs/doc/816-5172/6mbb7btp9?a=view ELF (3)] files, [http://docs.sun.com/app/docs/doc/816-5165/6mbb0m9t8?a=view strings(1)] on binary files. All this textual information was stored in a separate directory. This was gigabytes of characters. The initial perl script was named rob.pl ('''r'''evenge '''o'''f the '''b'''inaries). It took more than a day to complete the process; but it worked.
 
-Then to be able to search through all the text files rob.pl generated, I needed a really good text search engine. I evaluated a number of them, most were meant for searching generic plain text or html documents. They either had a poor performance or did not give accurate results. [http://lucene.apache.org/java Lucene] won the race. It is not a search engine as such. It is a library to create an inverted index and search it. You can use it to build your own search engine to suite your own domain of files. Initially I just used the example search engine that came with Lucene, and was amazed at its speed. Then I looked at the Lucene website and found that [http://nutch.sourceforge.net/blog/cutting.html Doug Cutting] was the author of Lucene. To any student of information retrieval (aka study of search engines) it is a familiar name. I took it for granted that Lucene is the right software to use.
+Then to be able to search through all the text files <code>rob.pl</code> generated, I needed a really good text search engine. I evaluated a number of them, most were meant for searching generic plain text or html documents. They either had a poor performance or did not give accurate results. [http://lucene.apache.org/java Lucene] won the race. It is not a search engine as such. It is a library to create an inverted index and search it. You can use it to build your own search engine to suite your own domain of files. Initially I just used the example search engine that came with Lucene, and was amazed at its speed. Then I looked at the Lucene website and found that [http://nutch.sourceforge.net/blog/cutting.html Doug Cutting] was the author of Lucene. To any student of information retrieval (aka study of search engines) it is a familiar name. I took it for granted that Lucene is the right software to use.
 
 == The Search Engines ==
 
@@ -28,7 +28,8 @@ The good thing about Lucene, is that it does not understand document content. Yo
 
 [[/images/ogstory-program.png]]
 
-The initial version of OpenGrok was a perl script named rob.pl that extracted the above 5 streams and piped them to a lucene search engine. rob.pl had become more intelligent. It was now running each file through ctags and extracting definitions. It also parsed out program identifiers. It would run **dis(1)** on ELF files and extract labels and call statement symbols.
+The initial version of OpenGrok was a perl script named rob.pl that extracted the above 5 streams and piped them to a Lucene search engine. <code>rob.pl</code> had become more intelligent. It was now running each file through ctags and extracting definitions. It also parsed out program identifiers. It would run 
+'''dis(1)''' on ELF files and extract labels and call statement symbols.
 
 I called it the //Universal Program Search Engine//. I was using this on my machine for quite some time. This system was used to confirm or deny existence of several vulnerabilities. For example I used it to confirm that no code in Solaris 7 was calling gzprintf() which was the cause of [http://www.cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2003-0107 CVE-2003-0107] Now I could pinpoint affected areas in Solaris for each newly discovered security hole.
 
